[package]
name = "lnk-server"
version = "4.0.0"
edition = "2021"
description = "LNK Tool v4.0 — Full Rust Backend & Frontend Server"

[dependencies]
actix-web = "4"
actix-multipart = "0.7"
actix-files = "0.6"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
regex = "1"
